syntax="proto3";

// api message
message ApiInfo {
  uint64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string path = 4;
  string description = 5;
  string group = 6;
  string method = 7;
}

message ApiListResp {
  uint64 total = 1;
  repeated ApiInfo data = 2;
}

message ApiListReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string path = 3;
  string description = 4;
  string method = 5;
  string group = 6;
}

service Core {
  // api management service

  // group: api
  rpc createOrUpdateApi (ApiInfo) returns (BaseResp);
  // group: api
  rpc deleteApi (IDReq) returns (BaseResp);
  // group: api
  rpc getApiList (ApiListReq) returns (ApiListResp);
}